--- a/src/css/board_update.css
+++ b/src/css/board_update.css
@@ -18,11 +18,12 @@ input {
     text-align: center;
     margin: 10px auto;
 }
-.top {
+.top_main {
     text-align: center;
     margin-top : 30px;
     font-family : 'Black Han Sans', sans-serif;
     font-weight : 300;
+    text-align : center;
 }
 .input_contents {
     width: 800px;
@@ -42,14 +43,14 @@ input {
 .label_title {
     font-size : 20px;
     position: relative;
-    left: -8px;
+    left: 20px;
     font-family: 'TheJamsil5Bold';
 }
 .input_title {
     width: 600px;
     text-align : start;
     position: relative;
-    left: -8px;
+    left: 20px;
     border : none;
     outline: 1px solid rgba(204, 204, 204, 0.856);
     border-radius: 5px;
@@ -63,19 +64,27 @@ input {
     width: 50px;
     outline: none;
     position: relative;
-    right: -20px;
+    right: 0px;
     font-family: 'TheJamsil5Bold';
 }
 .label_no {
     margin-left: 20px;
     position: relative;
-    right: -20px;
+    right: 0px;
     font-family: 'TheJamsil5Bold';
 }
 .btn {
     position: relative;
     left: 330px;
 }
-.top_main {
-    text-align : center;
+.top {
+    font-size: 30px;
+}
+.sub_title {
+    width: 810px;
+    margin: 0 auto;
+    text-align: center;
+    font-family: 'TheJamsil5Bold';
+    background-color: #212529;
+    color: white;
 }
