--- a/src/css/board_list.css
+++ b/src/css/board_list.css
@@ -32,6 +32,10 @@
 .hidden {
     visibility:hidden;
 }
+.tbl {
+    margin : 15px auto;
+    width : 900px;
+}
 .td_left {
     text-align : left;
 }
@@ -41,4 +45,24 @@
 }
 .tr_font {
     font-family: 'TheJamsil5Bold';
+}
+.tbl_tr {
+    width: 900px;
+    display: grid;
+    grid-template-columns: 130px 1fr 250px;
+}
+.tr_font:hover {
+    background-color: rgba(204, 204, 204, 0.253);
+}
+.tr_font {
+    margin: 5px;
+    margin-left: 0;
+    padding-bottom: 3px;
+    border-bottom: 1px solid rgba(148, 148, 148, 0.308);
+}
+.tbl_tr_color {
+    background-color: #212529;
+    color: white;
+    font-family: 'TheJamsil5Bold';
+    font-size : 20px;
 }
