--- a/src/css/board_list.css
+++ b/src/css/board_list.css
@@ -17,8 +17,11 @@
     margin-left : 15px;
 }
 .page_bar {
-    width : 600px;
+    width : 800px;
     margin : 0 auto;
+    display: grid;
+    grid-template-columns: 200px 1fr 200px;
+    position: relative;
 }
 .abs {
     margin : 20px auto;
@@ -73,4 +76,12 @@
     width: 900px;
     position: relative;
     display: inline-block;
+}
+.page_bar_back {
+    display: inline-block;
+    margin-top: 20px;
+}
+.page_bar_pront {
+    display: inline-block;
+    margin-top: 20px;
 }
