--- a/src/css/board_detail.css
+++ b/src/css/board_detail.css
@@ -16,7 +16,8 @@
     width: 811px;
     margin: 0 auto;
     border: 1px solid #ccc;
-    border-radius: 10px;;
+    border-radius: 10px;
+    word-break:break-all;
 }
 .info_div {
     width: 810px;
@@ -39,6 +40,7 @@
     left : 320px;
 }
 .board_contents {
+    width: 790px;
     font-size: 15px;
     margin : 10px;
 }
